# HangMan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  cleaner.sh
GameFiles/: words.json
Hang/: Includes.hpp  Main.cpp  Main.hpp
Hang/DeadMan/: DeadMan.cpp  DeadMan.hpp
Hang/Guesses/: Guesses.cpp  Guesses.hpp
Hang/Player/: Player.cpp  Player.hpp
Hang/Words/: Words.cpp  Words.hpp
